# gpt_validator

./: .gitignore  README.md  git_commands.py  gpt_validator.py  validation_rules.json
.github/workflows/: main.yml
agent/: .agent_rules.json  agent.tar  build_and_run_tests.py  git_file_handler.py  instruction_generator.py  requirements.txt  rules_parser.py  verify_agent.py  verify_files.py  zephyr_cmakelists_checker.py  zephyr_mock_link_audit.py  zephyr_unittest_file_checker.py  zephyr_verify_coverage.py
agent/scripts/: setup_env.sh
agent/unit_tests/: test_build_and_run_tests.py  test_git_file_handler.py  test_rules_parser.py  test_testframework_config.py  test_verify_agent.py  test_verify_files.py  test_zephyr_cmakelists_checker.py  test_zephyr_unittest_file_checker.py  test_zephyr_verify_coverage.py
custom_builder/: current_dir_builder.py
gcc_tester/: CMakeLists.txt
gcc_tester/include/: gcc_tester.h
gcc_tester/src/: gcc_tester.cpp
gcc_tester/tests/: CMakeLists.txt  test_gcc_tester.cpp
integration_tests/: agent.py  build_and_run_test_tester.py
unit_tests/: test_git_commands.py  test_gpt_validator.py  test_gpt_validator_extra.py  test_help.py
